building contact us page

--- a/views/contactPage.html
+++ b/views/contactPage.html
@@ -24,7 +24,7 @@
     
         <h2>Contact us page</h2>
         <div class="login">
-            <form id="login" action="/contactUs/contact-us" method="POST">
+            <form id="login" action="/contactUs/contact-us" method="POST"></form>
                 <label><b>Name
                 </b>
                 </label>
